Fixed potential problems in LogicElements